--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:0}
+server.port=9000
 spring.application.name=UserService
 eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
 eureka.client.fetchRegistry=true
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=ravi
 spring.datasource.password=Dream@1234
 spring.jpa.hibernate.ddl-auto=none
+
+app.client.tokenservice.url = http://localhost:9001
