--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3306/covid19army
 spring.datasource.username=ravi
 spring.datasource.password=Dream@1234
 spring.jpa.hibernate.ddl-auto=none
