--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/covid19army
 spring.datasource.username=ravi
 spring.datasource.password=Dream@1234
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.type=trace
 
 app.client.tokenservice.url = http://localhost:9001
