--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
 
 app.client.tokenservice.url = http://localhost:9001
+
+spring.rabbitmq.addresses=
+
+covid19army.rabbitmq.mobileotpexchange=mobileotpexchange
+#covid19army.rabbitmq.mobileotpexchange.routingkey=
