--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
 
 app.client.tokenservice.url = http://localhost:9001
+app.client.motpservice.url = http://localhost:9004
 
 spring.rabbitmq.addresses=
 
