updated properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.password=Dream@1234
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+spring.main.allow-bean-definition-overriding=true
 logging.level.org.hibernate.type=trace
 
 app.client.tokenservice.url = http://localhost:9001
