--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>json</artifactId>
 			 <version>20210307</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-config-client</artifactId>    
+		</dependency>
 		  <dependency>
 	        <groupId>com.covid19army</groupId>
 	        <artifactId>Covid19Army-Core</artifactId>
