--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+			        <executable>true</executable>
+			    </configuration>
 			</plugin>
 		</plugins>
+		<finalName>userservice</finalName>
 	</build>
 
 </project>
